Localization: Update orders label to الطلبات

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1067,7 +1067,7 @@
   "bringing_happiness_from_door_to_door": "جلب السعادة من الباب إلى الباب",
   "ready_to_send_something_special": "على استعداد لإرسال شيء خاص؟",
   "easiest_way_to_get_services": "أسهل طريقة للحصول على الخدمات",
-  "orders": "طلبات",
+  "orders": "الطلبات",
   "visit_again": "قم بالزيارة مرة أخرى",
   "get_your_recent_purchase_from_the_shop_you_recently_visited": "احصل على مشترياتك الأخيرة من المتجر الذي قمت بزيارته مؤخرًا",
   "special_offer": "عرض خاص",
