Update Delivery Man registration: hide email, auto-generate from phone, and increase image size limit to 5MB

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1644,7 +1644,8 @@
   "identity_info": "معلومات الهوية",
   "basic_info": "المعلومات الأساسية",
   "profile_image": "صورة الملف الشخصي",
-  "jpg_jpeg_png_less_then_1_mb": "JPG، JPEG، PNG أقل من 1 ميجابايت",
+  "jpg_jpeg_png_less_then_1_mb": "JPG، JPEG، PNG أقل من 5 ميجابايت",
+  "jpg_jpeg_png_less_then_5_mb": "JPG، JPEG، PNG يجب أن تكون أقل من 5 ميجابايت",
   "account_information": "معلومات الحساب",
   "delivery_info": "معلومات التسليم",
   "upload_identity_images": "تحميل صور الهوية",
