--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -1649,7 +1649,8 @@
   "identity_info": "Identity Info",
   "basic_info": "Basic Info",
   "profile_image": "Profile Image",
-  "jpg_jpeg_png_less_then_1_mb": "JPG, JPEG, PNG Less Than 1MB",
+  "jpg_jpeg_png_less_then_1_mb": "JPG, JPEG, PNG Less Than 5MB",
+  "jpg_jpeg_png_less_then_5_mb": "JPG, JPEG, PNG must be less than 5MB",
   "account_information": "Account Information",
   "delivery_info": "Delivery Info",
   "upload_identity_images": "Upload Identity Images",
