Fix: category name font size, home screen layout gaps, and store item filtering

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -229,7 +229,8 @@
   "no_slot_available": "لا توجد مواعيد متاحة",
   "select_a_time": "اختر وقتاً",
   "free": "مجاني",
-  "delivery": "توصيل",
+  "delivery": "التوصيل",
+  "estimated_time": "الوقت المقدر",
   "campaign_schedule": "جدول الحملة",
   "order_amount": "قيمة الطلب",
   "one_or_more_products_are_not_available_for_this_selected_time": "منتج أو أكثر غير متاح في هذا الوقت",
