--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -230,6 +230,7 @@
   "select_a_time": "Select a time",
   "free": "Free",
   "delivery": "Delivery",
+  "estimated_time": "Estimated Time",
   "campaign_schedule": "Campaign Schedule",
   "order_amount": "Order Amount",
   "one_or_more_products_are_not_available_for_this_selected_time": "One or more products are not available for this selected time",
